--- a/public/views/index.html
+++ b/public/views/index.html
@@ -2,6 +2,8 @@
   <head>
     <script src="/d3/d3.min.js"></script>
     <script src="/scripts/map.js"></script>
+    <style>
+    </style>
   </head>
 
   <body>
