--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,9 +1,11 @@
 <html>
   <head>
     <script src="/d3/d3.min.js"></script>
+    <script src="/d3-queue/d3-queue.js"></script>
+    <script src="/topojson/topojson.min.js"></script>
     <script src="/scripts/map.js"></script>
-    <style>
-    </style>
+
+    <link rel="stylesheet" href="/styles/vis_styles.css">
   </head>
 
   <body>
