--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,12 +1,11 @@
 <html>
   <head>
     <script src="/d3/d3.min.js"></script>
-    <script src="http://d3js.org/queue.v1.min.js"></script>
+    <!-- <script src="http://d3js.org/queue.v1.min.js"></script> -->
 
-    <!-- <script src="/d3-queue/d3-queue.js"></script> -->
+    <script src="/d3-queue/d3-queue.js"></script>
     <script src="/topojson/topojson.min.js"></script>
 
-    <script src="/scripts/map.js"></script>
 
     <link rel="stylesheet" href="/styles/vis_styles.css">
   </head>
@@ -14,6 +13,7 @@
   <body>
 
 
+    <script src="/scripts/map.js"></script>
   </body>
 
 </html>
