--- a/public/styles/vis_styles.css
+++ b/public/styles/vis_styles.css
@@ -7,7 +7,7 @@
   fill: none;
   stroke: #fff;
   stroke-linejoin: round;
-  fill:rgb(107,174,214);
+  /*fill:rgb(107,174,214);*/
 }
 
 .q0-9 { fill:rgb(247,251,255); }
